mobile contact overflow fix

--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -5,7 +5,7 @@
     background-color: var(--color-secondary);
     height: max-content;
     color: var(--color-text);
-    padding-left: 10%;
+    padding-left: 10%; 
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -39,17 +39,27 @@
     display: flex;
     align-items: center;
     gap: 25px;
+    border: 2px dashed rgb(2, 39, 206);
+    border-radius: 25px;
+    
 }
 .links img{
-    max-width: 50px;
+    max-width: 70px;
+    margin-left: 10px;;
 }
-.link a{
+.link p{
     color: var(--color-text);
     text-decoration: none;
     font-size: 30px;
     font-weight: 400;
     letter-spacing: 1.5px;
+    margin-right: 10px;
 }
+.links a{
+    text-decoration: none;
+    
+}
+
 
 @media screen and (max-width: 830px) {
     .container{
@@ -60,6 +70,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        padding: 0;
     }
     .links{
         align-items: center;
